--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,21 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+
+
 p {
     background-color: lightblue;
 }
 
 li {
-    color:darkblue;
+    color: darkblue;
 }
 
 h3 {
-    font-style:italic;
+    font-style: italic;
 }
 
 img {
@@ -16,5 +24,9 @@ img {
 }
 
 .avatar {
-    width:200px;
+    width: 500px;
+}
+
+#react {
+    color: green;
 }
